--- a/src/app/utils/search-box/search-box.component.html
+++ b/src/app/utils/search-box/search-box.component.html
@@ -18,7 +18,7 @@
     <span *ngIf="searchInput.value" class="fa fa-times-circle text-danger position-absolute hover high-zIndex"
       (click)="clear()" ngbTooltip="Clear Search" container="body" [placement]="toolTipDirection"></span>
   </div>
-  <button *ngIf="!openSearchBox" type="button" class="btn btn-light border ignore-outside"
+  <button *ngIf="!openSearchBox" type="button" class="btn btn-white border ignore-outside"
     (click)="openSearchBox=true">
     <span class="dsi dsi-search text-secondary ignore-outside"></span>
   </button>
