--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -1,10 +1,11 @@
-<div class="d-flex flex-column w-100 h-100 bg-light-gray page-padding">
-  <div class="options d-flex justify-content-between align-items-center w-100 pt-2 pb-4">
+<div class="faas-page d-flex flex-column w-100 bg-light-gray page-padding">
+  <div class="d-flex justify-content-between align-items-center w-100 pt-2 pb-4">
     <div class="font-22">
       <span class="fw-600 mr-2">Functions ({{totalCount}})</span>
       <span></span>
     </div>
     <div class="d-flex align-items-center">
+      <odp-search-box (enteredText)="search($event)" (reset)="resetSearch();"></odp-search-box>
       <button id="createFunction" type="button" class="add-new btn btn-primary ml-3" (click)="newFaas()"
         [disabled]="!hasWritePermission('FAAS')">
         <span class="dsi dsi-plus"></span>
@@ -12,53 +13,119 @@
     </div>
   </div>
   <div class="card-container d-flex flex-column w-100 mb-3">
-    <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style h-100"
+
+    <div *ngIf="records.length==0" class="rounded-lg border bg-white p-4">
+      <p class="m-0">No Records Found, <button type="button" class="btn btn-link px-1 py-0" (click)="newFaas()">Click
+          Here</button> to create a new Function
+        <span *ngIf="searchTerm">:&nbsp;<span class="fw-500">{{searchTerm}}</span></span>
+      </p>
+    </div>
+    <div *ngIf="records.length>0" class="list-group mb-3">
+      <div
+        class="list-group-item header d-flex align-items-center justify-content-between py-0 bg-light text-uppercase font-11 fw-500">
+        <div class="item-name">Name</div>
+        <div class="d-flex align-items-center">
+          <div class="item-url">URL</div>
+          <div class="item-status">Status</div>
+          <div class="item-last-invoked">Last Invoked</div>
+        </div>
+        <div class="item-actions"></div>
+      </div>
+      <div class="list-group-item d-flex align-items-center justify-content-between"
+        *ngFor="let item of records;let i=index">
+        <div class="item-name fw-500">
+          <span class="ml-2 pl-1 text-dark">{{item.name}}</span>
+          <span class="ml-2 version sub-heading font-11 text-uppercase">(v{{(item.version||1)}})</span>
+          <span *ngIf="item.draftVersion" class="ml-2 draft sub-heading font-11 text-uppercase">(Draft)</span>
+        </div>
+        <div class="d-flex align-items-center">
+          <div class="sub-heading item-url pr-3 d-flex align-items-center">
+            <span *ngIf="copied[item._id]" class="text-accent mr-2">Copied!</span>
+            <span *ngIf="!copied[item._id]" class="dsi dsi-copy text-accent mr-2 hover" (click)="copyUrl(item)"></span>
+            <span class="text-truncate" [ngbTooltip]="item.url">{{item.url}}</span>
+          </div>
+          <div class="sub-heading item-status d-flex align-items-center">
+            <span class="fa fa-circle mr-2" [ngClass]="getStatusClass(item)"></span>
+            <span class="text font-12 fw-400">{{item.status}}</span>
+          </div>
+          <div class="sub-heading item-last-invoked">
+            <span *ngIf="item.lastInvoked">{{item.lastInvoked | date:'medium'}}</span>
+            <span *ngIf="!item.lastInvoked" class="text-muted">-</span>
+          </div>
+        </div>
+        <div class="item-actions">
+          <div class="actions text-secondary d-flex justify-content-end hover align-items-center">
+            <ng-container *ngIf="item.status != 'Pending' && item.status != 'Maintainance' ">
+              <span *ngIf="canDeployFunction(item)" id='deploy_{{i}}' class="dsi dsi-skip-forward text-primary mr-2"
+                (click)="deployFunction(i)" [ngbTooltip]="'Deploy v'+(item.draftVersion || item.version)"
+                container="body"></span>
+              <span class="dsi dsi-play hover mr-2" *ngIf="item.status == 'STOPPED' && canStartStopFunction(i)"
+                (click)="toggleFunctionStatus(i)" [ngbTooltip]="'Start v'+(item.version || 1)" container="body"></span>
+              <span class="dsi dsi-stop hover mr-2" *ngIf="item.status == 'Active' && canStartStopFunction(i)"
+                (click)="toggleFunctionStatus(i)" [ngbTooltip]="'Stop v'+(item.version || 1)" container="body"></span>
+              <span class="dsi dsi-edit hover mr-2" *ngIf="canManageFaas(item._id)" (click)="editFunction(i)"></span>
+              <span class="dsi dsi-view hover mr-2" *ngIf="canManageFaas(item._id)" (click)="viewFunction(i)"></span>
+            </ng-container>
+            <span class="dsi dsi-copy hover mr-2" *ngIf="canManageFaas(item._id)" (click)="cloneFunction(i)"></span>
+            <span class="dsi dsi-trash hover mr-2" *ngIf="canManageFaas(item._id)" (click)="deleteFunction(i)"></span>
+
+            <!-- <ng-container *ngIf="canManageFaas(item._id) && easterEggEnabled">
+              <span class="text-muted mr-2">|</span>
+              <span id="getYamls" class="hover text-accent mr-2 font-11" (click)="getYamls(i)">YAMLs</span>
+              <span [ngbTooltip]="'Repair v'+item.version" id="repairDataService"
+                class="fa fa-toolbox text-accent mr-2 hover" (click)="repairService(i)"></span>
+            </ng-container> -->
+          </div>
+        </div>
+      </div>
+      <!-- <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style h-100"
       [columnDefs]="columnDefs" floatingFilter="true" rowModelType="infinite" [rowHeight]="56"
       (filterModified)="filterModified($event)" [datasource]="dataSource" cacheBlockSize="30" headerHeight="36"
       floatingFiltersHeight="40" (sortChanged)="sortChanged($event)" (gridReady)="gridReady($event)"
       [overlayNoRowsTemplate]="noRowsTemplate">
-    </ag-grid-angular>
+    </ag-grid-angular> -->
+    </div>
   </div>
-</div>
 
-<div *ngIf="showNewFaasWindow" class="overlay position-fixed"></div>
-<div class="new-faas-window p-4 position-fixed border-left bg-white d-flex flex-column"
-  [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
-  <div class="d-flex align-items-center justify-content-between">
-    <h5 class="m-0 font-20 fw-600">New Function</h5>
-    <button type="button" class="close" (click)="showNewFaasWindow=false">
-      <span>&times;</span>
-    </button>
-  </div>
-  <div *ngIf="showNewFaasWindow" class="d-flex flex-column w-100 mt-4">
-    <div class="form-group">
-      <label for="name" class="">
-        <span class="text">Name</span>
-        <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
-      </label>
-      <div class="name-wrapper position-relative">
-        <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
-          formControlName="name" odpAutoFocus
-          [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
-        <ng-container *ngIf="form.get('name').dirty">
-          <span *ngIf="form.get('name').hasError('required')"
-            class="text-danger position-absolute dsi dsi-danger-circle" container="body"
-            ngbTooltip="Name is required"></span>
-          <span *ngIf="form.get('name').hasError('maxlength')"
-            class="text-danger position-absolute dsi dsi-danger-circle" container="body"
-            ngbTooltip="Name should be within 30 characters"></span>
-          <span *ngIf="form.get('name').hasError('pattern')" class="text-danger position-absolute dsi dsi-danger-circle"
-            container="body" ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
-        </ng-container>
-      </div>
+  <div *ngIf="showNewFaasWindow" class="overlay position-fixed"></div>
+  <div class="new-faas-window p-4 position-fixed border-left bg-white d-flex flex-column"
+    [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
+    <div class="d-flex align-items-center justify-content-between">
+      <h5 class="m-0 font-20 fw-600">New Function</h5>
+      <button type="button" class="close" (click)="showNewFaasWindow=false">
+        <span>&times;</span>
+      </button>
     </div>
-    <div class="form-group">
-      <label for="apiEndpoint" class="">API Endpoint</label>
-      <div class="name-wrapper position-relative">
-        <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/faas/" formControlName="api">
+    <div *ngIf="showNewFaasWindow" class="d-flex flex-column w-100 mt-4">
+      <div class="form-group">
+        <label for="name" class="">
+          <span class="text">Name</span>
+          <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
+        </label>
+        <div class="name-wrapper position-relative">
+          <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
+            formControlName="name" odpAutoFocus
+            [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
+          <ng-container *ngIf="form.get('name').dirty">
+            <span *ngIf="form.get('name').hasError('required')"
+              class="text-danger position-absolute dsi dsi-danger-circle" container="body"
+              ngbTooltip="Name is required"></span>
+            <span *ngIf="form.get('name').hasError('maxlength')"
+              class="text-danger position-absolute dsi dsi-danger-circle" container="body"
+              ngbTooltip="Name should be within 30 characters"></span>
+            <span *ngIf="form.get('name').hasError('pattern')"
+              class="text-danger position-absolute dsi dsi-danger-circle" container="body"
+              ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+          </ng-container>
+        </div>
       </div>
-    </div>
-    <!-- <div class="form-group">
+      <div class="form-group">
+        <label for="apiEndpoint" class="">API Endpoint</label>
+        <div class="name-wrapper position-relative">
+          <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/faas/" formControlName="api">
+        </div>
+      </div>
+      <!-- <div class="form-group">
       <label for="description" class="">Description</label>
       <div class="name-wrapper position-relative">
         <textarea #newFaasTextarea class="form-control" id="description" rows="5" placeholder="No description"
@@ -70,9 +137,28 @@
         </ng-container>
       </div>
     </div> -->
+    </div>
+    <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
+      <button type="button" class="btn btn-primary w-100" id="newFaasModalYes" [disabled]="form.invalid"
+        (click)="triggerFaasCreate()">Create</button>
+    </div>
   </div>
-  <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
-    <button type="button" class="btn btn-primary w-100" id="newFaasModalYes" [disabled]="form.invalid"
-      (click)="triggerFaasCreate()">Create</button>
-  </div>
-</div>
+
+
+
+  <ng-template #alertModalTemplate>
+    <div class="modal-body p-4">
+      <div class="d-flex align-items-center justify-content-between w-100">
+        <span class="font-20 fw-600">{{ alertModal.title }}</span>
+        <span class="fa fa-times text-secondary hover" (click)="alertModalTemplateRef.close(false)"></span>
+      </div>
+      <p class="text-secondary text-center my-5">{{ alertModal.message }}</p>
+      <div class="d-flex align-items-center justify-content-end">
+        <button type="button" class="btn btn-min-width btn-primary" (click)="alertModalTemplateRef.close(true)">
+          Yes
+        </button>
+      </div>
+    </div>
+  </ng-template>
+
+  <odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteModal($event)"></odp-delete-modal>
